--- a/style.css
+++ b/style.css
@@ -1,26 +1,48 @@
 table {
-	border-collapse: collapse;
 	margin: 20px auto;
+	border-collapse: collapse;
 }
 
 td {
-	border: 2px solid black;
-	width: 100px;
-	height: 100px;
+	border: 1px solid black;
+	width: 80px;
+	height: 80px;
+	text-align: center;
+	font-size: 3em;
 }
 
 button {
-	font-size: 48px;
 	width: 100%;
 	height: 100%;
-	background: none;
+	background-color: white;
 	border: none;
+	font-size: inherit;
+	cursor: pointer;
 }
 
-#winner-select {
-	margin-right: 20px;
+button:hover {
+	background-color: #f2f2f2;
 }
 
-button#play-again-button {
-	font-size: 24px;
+button:focus {
+	outline: none;
+}
+
+div {
+	margin: 20px auto;
+	text-align: center;
+}
+
+#play-again {
+	font-size: 1.5em;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: #4CAF50;
+	color: white;
+	border: none;
+	cursor: pointer;
+}
+
+#play-again:hover {
+	background-color: #3e8e41;
 }
