--- a/style.css
+++ b/style.css
@@ -1,64 +1,44 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: black;
-  color: white;
-  font-family: Arial, sans-serif;
-}
-
-h1 {
+#header {
   text-align: center;
 }
 
-#game-board {
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-  justify-content: center;
-  margin: 0 auto;
+#game {
+  display: flex;
+  flex-wrap: wrap;
   width: 300px;
-  grid-gap: 10px;
+  margin: 0 auto;
 }
 
 .square {
-  border: 4px solid green;
-  font-size: 42px;
-  height: 100px;
-  line-height: 100px;
-  text-align: center;
   width: 100px;
-  color: white;
+  height: 100px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-size: 48px;
+  text-align: center;
+  line-height: 100px;
+  cursor: pointer;
+}
+
+.square:hover {
+  background-color: lightgray;
 }
 
 .square.69 {
-  background-color: 
-    lightblue
+  color: lightblue;
 }
 
 .square.420 {
-  background-color: #39ff14;
+  color: neongreen;
 }
 
 #result {
-  font-size: 69px;
-  margin: 20px auto;
   text-align: center;
+  font-size: 36px;
+  margin-top: 20px;
 }
 
 #reset {
-  background-color: white;
-  border: none;
-  color: black;
-  cursor: pointer;
   display: none;
-  font-size: 30px;
-  margin: 20px auto;
-  padding: 10px 20px;
+  margin-top: 20px;
 }
-
-#reset:hover {
-  background-color: #ccc;
-}
-
