--- a/style.css
+++ b/style.css
@@ -34,11 +34,16 @@
 
 #result {
   text-align: center;
-  font-size: 36px;
+  font-size: 69px;
   margin-top: 20px;
 }
 
 #reset {
   display: none;
+  text-align: center;
+  font-size: 30px;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
