--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 .square {
   width: 100px;
   height: 100px;
-  border: 1px solid black;
+  border: 2px solid green;
   box-sizing: border-box;
   font-size: 48px;
   text-align: center;
@@ -25,11 +25,11 @@
 }
 
 .square.69 {
-  color: lightblue;
+  color: light blue;
 }
 
 .square.420 {
-  color: neongreen;
+  color: neon green;
 }
 
 #result {
