--- a/style.css
+++ b/style.css
@@ -23,11 +23,33 @@
   text-align: center;
   line-height: 100px;
   cursor: pointer;
+  position: relative; /* needed to position the cross */
 }
 
 .square:hover {
-  background-color: lightgray;
+  background-color: transparent;
 }
+
+.square:hover::before,
+.square:hover::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: white;
+
+}
+
+.square:hover::before {
+  transform: rotate(45deg);
+}
+
+.square:hover::after {
+  transform: rotate(-45deg);
+}
+
 
 .square.69 {
   color: lightblue;
@@ -57,5 +79,18 @@
 
 body {
   background: linear-gradient(to right, #FF0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #8B00FF);
+}
+
+#cursor {
+  animation: color-change 1s infinite alternate;
+  border: 1px solid black;
+}
+
+@keyframes color-change {
+  0% { background-color: red; }
+  25% { background-color: green; }
+  50% { background-color: blue; }
+  75% { background-color: yellow; }
+  100% { background-color: purple; }
 }
 
